k8s/plain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug-service
spec:
  selector:
    app: debug-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
