k8s/plain/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: debug-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.debug-ingress
    http:
      paths:
      - backend:
          serviceName: debug-service
          servicePort: 80
